# sample-RabbitMQ-Cpp

./: CMakeLists.txt  README.md  memo.md
src/: main.cpp
